--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
 
   <!-- Plugins CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/plugins/font-awesome/css/all.css">
+  <script src="https://kit.fontawesome.com/bf79330bd6.js" crossorigin="anonymous"></script>
 
   <!-- Theme CSS -->
   <link id="theme-style" rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
