--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -97,5 +97,11 @@
     </li>
     {% endif %}
 
+    {% if sidebar.orcid %} 
+    <li class="orcid"><i class="fab fa-orcid"></i> 
+      <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank" rel="noopener">{{ sidebar.orcid }}</a> 
+    </li> 
+    {% endif %}
+
   </ul>
 </div><!--//contact-container-->
