--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -33,20 +33,20 @@
 
     {% if sidebar.orcid %} 
     <li class="orcid"><i class="fab fa-orcid"></i> 
-      <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank" rel="noopener">{{ "orcid" }}</a> 
+      <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank" rel="noopener">{{ "Orcid" }}</a> 
     </li> 
     {% endif %}
 
     {% if sidebar.scholar %} 
-    <i class="fa-brands fa-google-scholar"></i>
-      <a href="https://scholar.google.com/citations?user=ss9NS10AAAAJ&hl=pt-BR&oi=ao" target="_blank" rel="noopener">{{ "google-scholar" }}</a> 
-    </li> <br> <br>
+    <li class="scholar"><i class="fa-brands fa-google-scholar"></i>
+      <a href="https://scholar.google.com/citations?user=ss9NS10AAAAJ&hl=pt-BR&oi=ao" target="_blank" rel="noopener">{{ "Google-scholar" }}</a> 
+    </li>
     {% endif %}
 
     {% if sidebar.gate %} 
-    <i class="fa-brands fa-researchgate"></i>
-      <a href="https://www.researchgate.net/profile/Daniel-Schuch-2" target="_blank" rel="noopener">{{ "research-gate" }}</a> 
-    </li> <br> <br>
+    <li class="gate"><i class="fa-brands fa-researchgate"></i>
+      <a href="https://www.researchgate.net/profile/Daniel-Schuch-2" target="_blank" rel="noopener">{{ "Research-gate" }}</a> 
+    </li>
     {% endif %}
 
     {% if sidebar.website %}
