--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -38,14 +38,14 @@
     {% endif %}
 
     {% if sidebar.scholar %} 
-    <li class="scholar"><i class="fa-brands fa-google-scholar"></i>
-      <a href="https://scholar.google.com/citations?user=ss9NS10AAAAJ&hl=pt-BR&oi=ao" target="_blank" rel="noopener">{{ " Google-scholar" }}</a> 
+    <li class="scholar"><i class="fa-brands fa-google-scholar fa-lg"></i>
+      <a href="https://scholar.google.com/citations?user=ss9NS10AAAAJ&hl=pt-BR&oi=ao" target="_blank" rel="noopener">{{ "Google-scholar" }}</a> 
     </li>
     {% endif %}
 
     {% if sidebar.gate %} 
-    <li class="gate"><i class="fa-brands fa-researchgate"></i>
-      <a href="https://www.researchgate.net/profile/Daniel-Schuch-2" target="_blank" rel="noopener">{{ " Research-gate" }}</a> 
+    <li class="gate"><i class="fa-brands fa-researchgate fa-lg"></i>
+      <a href="https://www.researchgate.net/profile/Daniel-Schuch-2" target="_blank" rel="noopener">{{ "Research-gate" }}</a> 
     </li>
     {% endif %}
 
