--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -38,13 +38,13 @@
     {% endif %}
 
     {% if sidebar.scholar %} 
-    <li class="scholar"><i class="fa-brands fa-google-scholar fa-lg"></i>
+    <li class="scholar"><i class="fa-brands fa-google-scholar fa-lg fa-fw"></i>
       <a href="https://scholar.google.com/citations?user=ss9NS10AAAAJ&hl=pt-BR&oi=ao" target="_blank" rel="noopener">{{ "Google-scholar" }}</a> 
     </li>
     {% endif %}
 
     {% if sidebar.gate %} 
-    <li class="gate"><i class="fa-brands fa-researchgate fa-lg"></i>
+    <li class="gate"><i class="fa-brands fa-researchgate fa-lg fa-fw"></i>
       <a href="https://www.researchgate.net/profile/Daniel-Schuch-2" target="_blank" rel="noopener">{{ "Research-gate" }}</a> 
     </li>
     {% endif %}
