--- a/_sass/skins/_berry.scss
+++ b/_sass/skins/_berry.scss
@@ -2,7 +2,7 @@
 $theme-color: #4A4373;
 $text-color: #3F4650;
 $text-color-secondary: #545E6C;
-$text-grey: #7067A5;
+$text-grey: #97AAC3;
 $divider: #e8e8e8;
 $lighter-grey: #ccc;
 $darker-grey: #666;
