--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -33,7 +33,7 @@
 
     {% if sidebar.orcid %} 
     <li class="orcid"><i class="fab fa-orcid"></i> 
-      <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank" rel="noopener">{{ "Orcid" }}</a> 
+      <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank" rel="noopener">{{ "ORCID" }}</a> 
     </li> 
     {% endif %}
 
@@ -63,7 +63,7 @@
 
     {% if sidebar.github %}
     <li class="github"><i class="fab fa-github"></i>
-      <a href="http://github.com/{{ sidebar.github }}" target="_blank">{{ sidebar.github }}</a>
+      <a href="http://github.com/{{ sidebar.github }}" target="_blank">{{ "Github" }}</a>
     </li>
     {% endif %}
 
