--- a/_sass/skins/_berry.scss
+++ b/_sass/skins/_berry.scss
@@ -1,5 +1,5 @@
 /* Berry variables */
-$theme-color: #4A4373;
+$theme-color: #538f97;
 $text-color: #3F4650;
 $text-color-secondary: #545E6C;
 $text-grey: #5A7893;
