--- a/_includes/skill_bullet.html
+++ b/_includes/skill_bullet.html
@@ -9,9 +9,9 @@
     {{ skills.title }}
   </h2>
 
-  <ul class="skillset">
+  <ul class="skillset" style="list-style-type: disc; padding-left: 20px; margin-top: 0;">
     {% for skill in skills.toolset %}
-    <li class="item">
+    <li class="item" style="margin-bottom: 5px;">
       <strong>{{ skill.name }}:</strong> {{ skill.description }}
     </li>
     {% endfor %}
