--- a/_includes/skill_bullet.html
+++ b/_includes/skill_bullet.html
@@ -12,7 +12,7 @@
 
   {% for category in all_skills %}
   <!-- Subsection title (all caps, normal font, no icon) -->
-  <h3 class="subsection-title" style="text-transform: uppercase; font-weight: normal; margin-top: 15px;">
+  <h3 class="subsection-title" style="text-transform: uppercase; font-weight: normal; margin-top: 15px;font-size: 0.9em;">
     {{ category[1].title }}
   </h3>
 
