--- a/_includes/skill_bullet.html
+++ b/_includes/skill_bullet.html
@@ -7,7 +7,7 @@
       <i class="fas fa-circle fa-stack-2x"></i>
       <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
     </span>
-    Skills & Proficiency
+    Skills
   </h2>
 
   {% for category in all_skills %}
