--- a/_includes/education.html
+++ b/_includes/education.html
@@ -10,6 +10,9 @@
     {% for graduation in education.info %}
     <div class="item">
       <h4 class="degree">{{ graduation.degree }}</h4>
+      {% if graduation.tesis %}
+      <div class="thesis">“{{ graduation.tesis }}”</div>
+      {% endif %}
       <h5 class="meta">{{ graduation.university }}</h5>
       <div class="time">{{ graduation.time }}</div>
     </div><!--//item-->
