--- a/_includes/education.html
+++ b/_includes/education.html
@@ -11,7 +11,7 @@
     <div class="item">
       <h4 class="degree">{{ graduation.degree }}</h4>
       {% if graduation.tesis %}
-      <div class="thesis">“{{ graduation.tesis }}”</div>
+      <div class="thesis"><em>“{{ graduation.tesis }}”</em></div>
       {% endif %}
       <h5 class="meta">{{ graduation.university }}</h5>
       <div class="time">{{ graduation.time }}</div>
