--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -51,7 +51,7 @@
 
     {% if sidebar.neu %}
     <li class="website"><i class="fas fa-globe-americas"></i>
-      <a href="https://coe.northeastern.edu/Research/CASCADE/Daniel_schuch.html" target="_blank">{{ "NEU" }}</a>
+      <a href="https://lattes.cnpq.br/7656605773440811" target="_blank">{{ "Lattes" }}</a>
     </li>
     {% endif %}    
 
