--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -64,6 +64,12 @@ p {
     margin-top: 0;
     margin-bottom: 10px;
   }
+  .katakana {
+    font-size: 26px;
+    font-weight: 900;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
   .tagline {
     color: rgba(256, 256, 256, 0.6);
     font-size: 16px;
