--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 
     {% if sidebar.name %}
     <h1 class="name">{{ sidebar.name }}</h1>
-    <h1 class="name">{{ sidebar.katakana }}</h1>
+    <h1 class="katakana">{{ sidebar.katakana }}</h1>
     {% endif %}
 
     {% if sidebar.tagline %}
