--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -75,7 +75,7 @@
 
     {% if sidebar.linkedin %}
     <li class="linkedin"><i class="fab fa-linkedin"></i>
-      <a href="https://linkedin.com/in/{{ sidebar.linkedin }}" target="_blank">{{ "linkedin" }}</a>
+      <a href="https://linkedin.com/in/{{ sidebar.linkedin }}" target="_blank">{{ "Linkedin" }}</a>
     </li>
     {% endif %}
 
